--- a/.github/workflows/develop.yml
+++ b/.github/workflows/develop.yml
@@ -66,7 +66,7 @@ jobs:
         username: ${{ secrets.DOCKER_USERNAME }}
         password: ${{ secrets.DOCKER_PASSWORD }}
 
-        # Step 10: Determine Version Tag (Using Git Tag or Manually Provided Version).
+    # Step 10: Determine Version Tag (Using Git Tag or Manually Provided Version).
     - name: Determine Version Tag
       id: version
       run: |
@@ -80,26 +80,25 @@ jobs:
         if [[ -z "$LATEST_TAG" ]]; then
           VERSION="1.0.0"
         else
-          # Parse the latest tag (major.minor.patch).
-          IFS='.' read -r LATEST_MAJOR LATEST_MINOR LATEST_PATCH <<< "$LATEST_TAG"
+          # Parse the version (major.minor.patch).
+          IFS='.' read -r MAJOR MINOR PATCH <<< "$LATEST_TAG"
           
-          # Fetch the previous tag (second latest).
-          PREVIOUS_TAG=$(git tag -l | sort -V | tail -n 2 | head -n 1)
-          
-          # If previous tag exists, parse it.
-          if [[ -n "$PREVIOUS_TAG" ]]; then
-            IFS='.' read -r PREVIOUS_MAJOR PREVIOUS_MINOR PREVIOUS_PATCH <<< "$PREVIOUS_TAG"
-          fi
-
-          # Check if it's a custom tag (for example: 1.5.0) or generated tag (like 1.4.0).
-          if [[ "$LATEST_MINOR" == "$PREVIOUS_MINOR" && "$LATEST_PATCH" -gt "$PREVIOUS_PATCH" ]]; then
-            # Custom tag detected: It's a fresh version, no increment needed.
-            VERSION="$LATEST_TAG"
+          # If there's no PATCH value (like "1.3"), set PATCH to 0
+          if [[ -z "$PATCH" ]]; then
+            PATCH=0
           else
-            # Handle generated tag scenario: Increment patch version.
-            PATCH=$((LATEST_PATCH + 1))
-            VERSION="$LATEST_MAJOR.$LATEST_MINOR.$PATCH"
+            # Increment the version based on the current version (increment patch by default).
+            PATCH=$((PATCH + 1))
           fi
+          
+          # Set the new version (e.g., 1.0.1 or 1.1.0).
+          VERSION="$MAJOR.$MINOR.$PATCH"
+          
+          # Loop until we find a tag that does not exist.
+          while git rev-parse "$VERSION" >/dev/null 2>&1; do
+            PATCH=$((PATCH + 1))  # Increment patch version again if the tag already exists.
+            VERSION="$MAJOR.$MINOR.$PATCH"
+          done
         fi
         
         echo "VERSION=$VERSION" >> $GITHUB_ENV
