--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,4 +1,4 @@
-name: Release workflow
+name: Release
 
 on:
   pull_request:
@@ -41,51 +41,51 @@ jobs:
       run: |
         echo "${{ secrets.DOCKER_RELEASE_APPLICATION_CONFIG_YAML }}" | base64 -d > config/yaml/v1/docker.release.application.yaml
 
-    # # Step 6: Start MongoDB and App Release Containers.
-    # - name: Start MongoDB and App Release Containers
-    #   run: |
-    #     docker compose up mongodb -d
-    #     sleep 32  # Wait for MongoDB to start.
+    # Step 6: Start MongoDB and App Release Containers.
+    - name: Start MongoDB and App Release Containers
+      run: |
+        docker compose up mongodb -d
+        sleep 32  # Wait for MongoDB to start.
         
-    #     docker compose up app-release -d
-    #     sleep 4  # Wait for the app container to initialize.
-    #     docker logs go-blog-platform-app-release-1
+        docker compose up app-release -d
+        sleep 4  # Wait for the app container to initialize.
+        docker logs go-blog-platform-app-release-1
 
-    # # Step 7: List All Running Containers.
-    # - name: List All Running Containers
-    #   run: docker ps
+    # Step 7: List All Running Containers.
+    - name: List All Running Containers
+      run: docker ps
 
-    # # Step 8: Stop Running Containers.
-    # - name: Stop Running Containers
-    #   run: docker stop $(docker ps -a -q)
+    # Step 8: Stop Running Containers.
+    - name: Stop Running Containers
+      run: docker stop $(docker ps -a -q)
 
-    # # Step 9: Log in to DockerHub.
-    # - name: Log in to DockerHub
-    #   uses: docker/login-action@v2
-    #   with:
-    #     username: ${{ secrets.DOCKER_USERNAME }}
-    #     password: ${{ secrets.DOCKER_PASSWORD }}
+    # Step 9: Log in to DockerHub.
+    - name: Log in to DockerHub
+      uses: docker/login-action@v2
+      with:
+        username: ${{ secrets.DOCKER_USERNAME }}
+        password: ${{ secrets.DOCKER_PASSWORD }}
     
-    # # Step 10: Determine Version Tag.
-    # - name: Determine Version Tag
-    #   id: version
-    #   run: |
-    #     git fetch --tags
-    #     LATEST_TAG=$(git tag -l --sort=-v:refname | head -n 1)
-    #     VERSION="$LATEST_TAG"
+    # Step 10: Determine Version Tag.
+    - name: Determine Version Tag
+      id: version
+      run: |
+        git fetch --tags
+        LATEST_TAG=$(git tag -l --sort=-v:refname | head -n 1)
+        VERSION="$LATEST_TAG"
         
-    #     echo "VERSION=$VERSION" >> $GITHUB_ENV
-    #     echo "Version Tag: $VERSION"
+        echo "VERSION=$VERSION" >> $GITHUB_ENV
+        echo "Version Tag: $VERSION"
 
-    # # Step 11: Build Docker Image for app-release.
-    # - name: Build Docker Image for app-release
-    #   run: |
-    #     docker buildx build -f infrastructure/deployment/docker/Dockerfile.release -t ${{ secrets.MONGO_INITDB_ROOT_USERNAME }}/app-release:${{ env.VERSION }} . --cache-from ${{ secrets.MONGO_INITDB_ROOT_USERNAME }}/app-release:latest --push
-    #     docker buildx build -f infrastructure/deployment/docker/Dockerfile.release -t ${{ secrets.MONGO_INITDB_ROOT_USERNAME }}/app-release:latest . --cache-from ${{ secrets.MONGO_INITDB_ROOT_USERNAME }}/app-release:${{ env.VERSION }} --push
+    # Step 11: Build Docker Image for app-release.
+    - name: Build Docker Image for app-release
+      run: |
+        docker buildx build -f infrastructure/deployment/docker/Dockerfile.release -t ${{ secrets.MONGO_INITDB_ROOT_USERNAME }}/app-release:${{ env.VERSION }} . --cache-from ${{ secrets.MONGO_INITDB_ROOT_USERNAME }}/app-release:latest --push
+        docker buildx build -f infrastructure/deployment/docker/Dockerfile.release -t ${{ secrets.MONGO_INITDB_ROOT_USERNAME }}/app-release:latest . --cache-from ${{ secrets.MONGO_INITDB_ROOT_USERNAME }}/app-release:${{ env.VERSION }} --push
 
-    # # Step 12: Push Docker Image to Registry.
-    # - name: Push Docker Image
-    #   run: |
-    #     docker push ${{ secrets.MONGO_INITDB_ROOT_USERNAME }}/app-release:${{ env.VERSION }}
-    #     docker push ${{ secrets.MONGO_INITDB_ROOT_USERNAME }}/app-release:latest
+    # Step 12: Push Docker Image to Registry.
+    - name: Push Docker Image
+      run: |
+        docker push ${{ secrets.MONGO_INITDB_ROOT_USERNAME }}/app-release:${{ env.VERSION }}
+        docker push ${{ secrets.MONGO_INITDB_ROOT_USERNAME }}/app-release:latest
     
