--- a/.github/workflows/develop.yml
+++ b/.github/workflows/develop.yml
@@ -45,10 +45,17 @@ jobs:
     - name: Start MongoDB and App Develop Containers
       run: |
         docker compose up mongodb -d
-        sleep 32  # Wait for MongoDB to start.
-        
+        timeout=30
+        while ! docker exec mongodb mongo --eval "db.stats()" > /dev/null 2>&1; do
+          timeout=$((timeout-1))
+          if [ $timeout -le 0 ]; then
+            echo "MongoDB did not start in time"
+            exit 1
+          fi
+          sleep 1
+        done
+
         docker compose up app-develop -d
-        sleep 4  # Wait for the app container to initialize.
         docker logs go-blog-platform-app-develop-1
 
     # Step 7: List All Running Containers.
@@ -82,14 +89,12 @@ jobs:
         echo "VERSION=$VERSION" >> $GITHUB_ENV
         echo "Version Tag: $VERSION"
 
-    # Step 11: Build Docker Image for app-develop.
-    - name: Build Docker Image for app-develop
+    # Step 11: Build and Push Docker Image for app-develop.
+    - name: Build and Push Docker Image for app-develop
       run: |
-        docker buildx build -f infrastructure/deployment/docker/Dockerfile.develop -t ${{ secrets.MONGO_INITDB_ROOT_USERNAME }}/app-develop:${{ env.VERSION }} . --cache-from ${{ secrets.MONGO_INITDB_ROOT_USERNAME }}/app-develop:latest --push
-        docker buildx build -f infrastructure/deployment/docker/Dockerfile.develop -t ${{ secrets.MONGO_INITDB_ROOT_USERNAME }}/app-develop:latest . --cache-from ${{ secrets.MONGO_INITDB_ROOT_USERNAME }}/app-develop:${{ env.VERSION }} --push
-
-    # Step 12: Push Docker Image to Registry.
-    - name: Push Docker Image
-      run: |
-        docker push ${{ secrets.MONGO_INITDB_ROOT_USERNAME }}/app-develop:${{ env.VERSION }}
-        docker push ${{ secrets.MONGO_INITDB_ROOT_USERNAME }}/app-develop:latest
+        docker buildx build \
+          --file infrastructure/deployment/docker/Dockerfile.develop \
+          --tag ${{ secrets.DOCKER_USERNAME }}/app-develop:${{ env.VERSION }} \
+          --tag ${{ secrets.DOCKER_USERNAME }}/app-develop:latest \
+          --cache-from type=registry,ref=${{ secrets.DOCKER_USERNAME }}/app-develop:latest \
+          --push .
