--- a/.github/workflows/develop.yml
+++ b/.github/workflows/develop.yml
@@ -46,7 +46,7 @@ jobs:
       run: |
         docker compose up mongodb -d
         sleep 32  # Wait for MongoDB to start.
-        
+
         docker compose up app-develop -d
         sleep 4  # Wait for the app container to initialize.
         docker logs go-blog-platform-app-develop-1
@@ -59,36 +59,9 @@ jobs:
     - name: Stop Running Containers
       run: docker stop $(docker ps -a -q)
 
-    # Step 9: Log in to DockerHub.
-    - name: Log in to DockerHub
-      uses: docker/login-action@v2
-      with:
-        username: ${{ secrets.DOCKER_USERNAME }}
-        password: ${{ secrets.DOCKER_PASSWORD }}
-
-    # Step 10: Determine Version Tag.
-    - name: Determine Version Tag
-      id: version
-      run: |
-        git fetch --tags
-        LATEST_TAG=$(git tag -l --sort=-v:refname | head -n 1)
-
-        if [ -z "$LATEST_TAG" ]; then
-          VERSION="1.0.0"
-        else
-          VERSION="$LATEST_TAG"
-        fi
-
-        echo "VERSION=$VERSION" >> $GITHUB_ENV
-        echo "Version Tag: $VERSION"
-
-    # Step 11: Build and Push Docker Image for app-develop.
-    - name: Build and Push Docker Image for app-develop
-      run: |
-        docker buildx build \
-          --file infrastructure/deployment/docker/Dockerfile.develop \
-          --tag ${{ secrets.DOCKER_USERNAME }}/app-develop:${{ env.VERSION }} \
-          --tag ${{ secrets.DOCKER_USERNAME }}/app-develop:latest \
-          --cache-from type=registry,ref=${{ secrets.DOCKER_USERNAME }}/app-develop:latest \
-          --push .
-          
+  deploy:
+    needs: build-and-push  # Ensure the previous steps complete before proceeding.
+    uses: ./.github/workflows/deploy-docker.yml  # Reuse the deploy Docker workflow.
+    with:
+      docker_username: ${{ secrets.DOCKER_USERNAME }}
+      docker_password: ${{ secrets.DOCKER_PASSWORD }}
