--- a/.github/workflows/deploy-docker.yml
+++ b/.github/workflows/deploy-docker.yml
@@ -1,12 +1,32 @@
+name: Deploy Docker Image
+
 on:
   workflow_call:
+    inputs:
+      docker_username:
+        required: true
+        type: string
+      docker_password:
+        required: true
+        type: string
 
 jobs:
   deploy:
     runs-on: ubuntu-latest
 
     steps:
-    # Step 1: Determine Version Tag.
+    # Step 1: Checkout the repository to have access to code
+    - name: Checkout Code
+      uses: actions/checkout@v4
+
+    # Step 2: Log in to DockerHub
+    - name: Log in to DockerHub
+      uses: docker/login-action@v2
+      with:
+        username: ${{ inputs.docker_username }}
+        password: ${{ inputs.docker_password }}
+
+    # Step 3: Determine Version Tag.
     - name: Determine Version Tag
       id: version
       run: |
@@ -22,12 +42,12 @@ jobs:
         echo "VERSION=$VERSION" >> $GITHUB_ENV
         echo "Version Tag: $VERSION"
 
-    # Step 2: Build and Push Docker Image for app-develop
+    # Step 4: Build and Push Docker Image for app-develop
     - name: Build and Push Docker Image for app-develop
       run: |
         docker buildx build \
           --file infrastructure/deployment/docker/Dockerfile.develop \
-          --tag ${{ secrets.DOCKER_USERNAME }}/app-develop:${{ env.VERSION }} \
-          --tag ${{ secrets.DOCKER_USERNAME }}/app-develop:latest \
-          --cache-from type=registry,ref=${{ secrets.DOCKER_USERNAME }}/app-develop:latest \
+          --tag ${{ inputs.docker_username }}/app-develop:${{ env.VERSION }} \
+          --tag ${{ inputs.docker_username }}/app-develop:latest \
+          --cache-from type=registry,ref=${{ inputs.docker_username }}/app-develop:latest \
           --push .
