--- a/.github/workflows/deploy-docker.yml
+++ b/.github/workflows/deploy-docker.yml
@@ -15,18 +15,24 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    # Step 1: Checkout the repository to have access to code
+    # Step 1: Check out the repository.
     - name: Checkout Code
       uses: actions/checkout@v4
 
-    # Step 2: Log in to DockerHub
+    # Step 2: Set up Go.
+    - name: Set up Go
+      uses: actions/setup-go@v5
+      with:
+        go-version: stable
+
+    # Step 3: Log in to DockerHub
     - name: Log in to DockerHub
       uses: docker/login-action@v2
       with:
         username: ${{ inputs.docker_username }}
         password: ${{ inputs.docker_password }}
 
-    # Step 3: Determine Version Tag.
+    # Step 4: Determine Version Tag.
     - name: Determine Version Tag
       id: version
       run: |
@@ -42,7 +48,7 @@ jobs:
         echo "VERSION=$VERSION" >> $GITHUB_ENV
         echo "Version Tag: $VERSION"
 
-    # Step 4: Build and Push Docker Image for app-develop
+    # Step 5: Build and Push Docker Image for app-develop
     - name: Build and Push Docker Image for app-develop
       run: |
         docker buildx build \
