--- a/.github/workflows/develop.yml
+++ b/.github/workflows/develop.yml
@@ -28,41 +28,67 @@ jobs:
         go-version: stable
 
     # Step 4: Decode and Create YAML File.
-    # - name: Decode and Create YAML File
-    #   run: |
-    #     echo "${{ secrets.DOCKER_DEVELOP_APPLICATION_CONFIG_YAML }}" | base64 -d > config/yaml/v1/docker.develop.application.yaml
+    - name: Decode and Create YAML File
+      run: |
+        echo "${{ secrets.DOCKER_DEVELOP_APPLICATION_CONFIG_YAML }}" | base64 -d > config/yaml/v1/docker.develop.application.yaml
 
-    # # Step 5: Create .env File for MongoDB.
-    # - name: Create .env File for MongoDB
-    #   run: |
-    #     echo "MONGO_INITDB_DATABASE=${{ secrets.MONGO_INITDB_DATABASE }}" > infrastructure/script/data/repository/mongo/.env
-    #     echo "MONGO_INITDB_ROOT_USERNAME=${{ secrets.MONGO_INITDB_ROOT_USERNAME }}" >> infrastructure/script/data/repository/mongo/.env
-    #     echo "MONGO_INITDB_ROOT_PASSWORD=${{ secrets.MONGO_INITDB_ROOT_PASSWORD }}" >> infrastructure/script/data/repository/mongo/.env
-    #     echo "ADMIN_EMAIL=${{ secrets.ADMIN_EMAIL }}" >> infrastructure/script/data/repository/mongo/.env
-    #     echo "ADMIN_HASHED_PASSWORD=${{ secrets.ADMIN_HASHED_PASSWORD }}" >> infrastructure/script/data/repository/mongo/.env
+    # Step 5: Create .env File for MongoDB.
+    - name: Create .env File for MongoDB
+      run: |
+        echo "MONGO_INITDB_DATABASE=${{ secrets.MONGO_INITDB_DATABASE }}" > infrastructure/script/data/repository/mongo/.env
+        echo "MONGO_INITDB_ROOT_USERNAME=${{ secrets.MONGO_INITDB_ROOT_USERNAME }}" >> infrastructure/script/data/repository/mongo/.env
+        echo "MONGO_INITDB_ROOT_PASSWORD=${{ secrets.MONGO_INITDB_ROOT_PASSWORD }}" >> infrastructure/script/data/repository/mongo/.env
+        echo "ADMIN_EMAIL=${{ secrets.ADMIN_EMAIL }}" >> infrastructure/script/data/repository/mongo/.env
+        echo "ADMIN_HASHED_PASSWORD=${{ secrets.ADMIN_HASHED_PASSWORD }}" >> infrastructure/script/data/repository/mongo/.env
 
-    # # Step 6: Start MongoDB and App Develop Containers.
-    # - name: Start MongoDB and App Develop Containers
-    #   run: |
-    #     docker compose up mongodb -d
-    #     sleep 32  # Wait for MongoDB to start.
+    # Step 6: Start MongoDB and App Develop Containers.
+    - name: Start MongoDB and App Develop Containers
+      run: |
+        docker compose up mongodb -d
+        sleep 32  # Wait for MongoDB to start.
+        
+        docker compose up app-develop -d
+        sleep 4  # Wait for the app container to initialize.
+        docker logs go-blog-platform-app-develop-1
 
-    #     docker compose up app-develop -d
-    #     sleep 4  # Wait for the app container to initialize.
-    #     docker logs go-blog-platform-app-develop-1
+    # Step 7: List All Running Containers.
+    - name: List All Running Containers
+      run: docker ps
 
-    # # Step 7: List All Running Containers.
-    # - name: List All Running Containers
-    #   run: docker ps
+    # Step 8: Stop Running Containers.
+    - name: Stop Running Containers
+      run: docker stop $(docker ps -a -q)
 
-    # # Step 8: Stop Running Containers.
-    # - name: Stop Running Containers
-    #   run: docker stop $(docker ps -a -q)
+    # Step 9: Log in to DockerHub.
+    - name: Log in to DockerHub
+      uses: docker/login-action@v2
+      with:
+        username: ${{ secrets.DOCKER_USERNAME }}
+        password: ${{ secrets.DOCKER_PASSWORD }}
 
-  deploy:
-    needs: build-and-push  # Ensure the previous steps complete before proceeding.
-    runs-on: ubuntu-latest  # This runs the deploy job locally.
+    # Step 10: Determine Version Tag.
+    - name: Determine Version Tag
+      id: version
+      run: |
+        git fetch --tags
+        LATEST_TAG=$(git tag -l --sort=-v:refname | head -n 1)
 
-    steps:
-    - name: Deploy Docker Image
-      uses: ./.github/workflows/deploy-docker.yml  # Reuse the deploy Docker workflow.
+        if [ -z "$LATEST_TAG" ]; then
+          VERSION="1.0.0"
+        else
+          VERSION="$LATEST_TAG"
+        fi
+
+        echo "VERSION=$VERSION" >> $GITHUB_ENV
+        echo "Version Tag: $VERSION"
+
+    # Step 11: Build and Push Docker Image for app-develop.
+    - name: Build and Push Docker Image for app-develop
+      run: |
+        docker buildx build \
+          --file infrastructure/deployment/docker/Dockerfile.develop \
+          --tag ${{ secrets.DOCKER_USERNAME }}/app-develop:${{ env.VERSION }} \
+          --tag ${{ secrets.DOCKER_USERNAME }}/app-develop:latest \
+          --cache-from type=registry,ref=${{ secrets.DOCKER_USERNAME }}/app-develop:latest \
+          --push .
+          
